# Framework

./: .gitignore  CMakeLists.txt  README.md  cmake-linux.sh  cmake-mingw-windows-x64.bat  cmake-mingw-windows-x86.bat  cmake-mingw-windows__IN_PROGRESS.bat  cmake-mingw.bat  cmake-windows-x64.bat  cmake-windows-x86.bat  cmake-windows.bat  utils.cmake
Code/: DiaryApplication.cpp  DiaryApplication.h  Main.c  Main.cpp
Code/Diary/Components/: TestComponent.cpp  TestComponent.h
Code/Entities/: TestEntity.cpp  TestEntity.h
Code/Framework/: StbImplementations.cpp
Code/Framework/FrameAsset/: AssetsManager.cpp  AssetsManager.h  Font.cpp  Font.h  Sound.h  Sprite.cpp  Sprite.h
Code/Framework/FrameAudio/: AudioPlayer.cpp  AudioPlayer.h  AudioSource.cpp  AudioSource.h
Code/Framework/FrameCore/: BaseTypes.h  BasicTypes.h  Camera.cpp  Camera.h  Globals.cpp  Globals.h  IApplication.cpp  IApplication.h  Log.cpp  Log.h
Code/Framework/FrameEntity/: CEntity.cpp  ComponentRegister.h  Entity.cpp  Entity.h  EntityEvent.h  EntityEventProcessor.cpp  EntityEventProcessor.h  EntitySystem.cpp  EntitySystem.h  IEntity.cpp  IEntity.h  IEntityComponent.h
Code/Framework/FrameInput/: Input.cpp  Input.h  InputEnums.h  InputManager.h  KeyboardInput.cpp  KeyboardInput.h  MouseInput.cpp  MouseInput.h
Code/Framework/FrameMath/: ColorMath.cpp  ColorMath.h  Math.h  MathCommon.h  Matrix22.h  Matrix33.h  Matrix_tpl.h  Vector2.h  Vector3.h
Code/Framework/FrameReflection/: Reflection.h
Code/Framework/FrameRender/: BasicRenderingTypes.h  DefaultShaders.h  Framebuffer.cpp  Framebuffer.h  IRenderer.h  Renderer.cpp  Renderer.h  RendererBase.h  RendererBaseClass.h  Shader.cpp  Shader.h  ShapeRenderer.cpp  ShapeRenderer.h  TextRenderer.cpp  TextRenderer.h  TextureVertexBuffer.h
Code/Framework/FrameUtility/: BitOperation.h  GUID.h
Examples/Test/: CMakeLists.txt
Examples/Test/Code/: Application.cpp  Application.h  Main.cpp
Examples/Test/Code/Components/: TestComponent.cpp  TestComponent.h
Framework/FrameAsset/: ErrorSprite.h  Font.cpp  Font.h  Sound.cpp  Sprite.cpp  Sprite.h
Framework/FrameAudio/: AudioPlayer.cpp  AudioPlayer.h  AudioSource.cpp  AudioSource.h
Framework/FrameCore/: BasicTypes.h  Camera.cpp  Camera.h  Globals.cpp  Globals.h  IApplication.cpp  IApplication.h  Log.cpp  Log.h
Framework/FrameEntity/: ComponentRegister.h  Entity.cpp  Entity.h  EntityEvent.h  EntityEventProcessor.cpp  EntityEventProcessor.h  EntitySystem.cpp  EntitySystem.h  IEntityComponent.h
Framework/FrameInput/: ButtonInputBase.h  Input.cpp  Input.h  InputEnums.h  KeyboardInput.h  MouseInput.cpp  MouseInput.h
Framework/FrameMath/: ColorMath.cpp  ColorMath.h  Math.h  MathCommon.h  Matrix22.h  Matrix33.h  Matrix_tpl.h  Vector2.h  Vector3.h
Framework/FrameRender/: DefaultShaders.h  Framebuffer.cpp  Framebuffer.h  Renderer.cpp  Renderer.h  RendererBase.cpp  RendererBase.h  Shader.cpp  Shader.h  ShapeRenderer.cpp  ShapeRenderer.h  TextRenderer.cpp  TextRenderer.h  TextureVertexBuffer.h
Framework/FrameUtility/: BitOperation.h  GUID.cpp  GUID.h  UTF8Utils.h
Shaders/: Color.frag  Color.vert  Default.frag  InstanceSprite.vert  Sprite.vert  Text.frag  Text.vert
Third/glad/include/glad/: glad.h
Third/glad/src/: glad.c
